[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-agent-starter"
version = "0.1.0"
description = "Clone-and-run template for building multi-agent systems with LangGraph. State schema, tool calling, routing, streaming, memory — no toy examples."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Prayas Jain", email = "prayas1711@gmail.com" }]
requires-python = ">=3.10"
keywords = ["langgraph", "langchain", "agents", "llm", "multi-agent", "tool-calling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
anthropic = ["langchain-anthropic>=0.2.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/prayas17/langgraph-agent-starter"

[project.scripts]
agent = "agent_starter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agent_starter"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
